Fix - mobile white space right side + css prioritizations

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -530,10 +530,6 @@ html, body{
       height: 100%;
 }
 
-html {
-    overflow-x: hidden;
-}
-
 svg {
   opacity: 0;
 }
