--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,17 @@
 /* Custom Styles */
 
+html {
+    overflow-x: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
+body {
+  overflow-x: hidden;
+}
+
 ::-moz-selection {
     color: #fff;
     background: #555;
